--- a/src/components/Gallery.astro
+++ b/src/components/Gallery.astro
@@ -54,9 +54,19 @@ function getRows(arr: any) {
         ) : (
           <a
             href={`/drawings/${item.slug}`}
-            class="block w-4/6 h-40 mx-auto my-2 rounded shadow hover:shadow-lg hover:scale-105 transition-transform duration-300 hover:cursor-pointer"
+            class="block w-4/6 mx-auto my-2 rounded shadow hover:shadow-lg hover:scale-105 transition-transform duration-300 hover:cursor-pointer bg-white overflow-hidden"
           >
-            <img src={item.image} alt="" class="w-full h-full " />
+            <div class="h-40 overflow-hidden">
+              <img
+                src={item.image}
+                alt={item.title}
+                class="w-full h-full object-contain"
+              />
+            </div>
+            <div class="p-3 text-center">
+              <h2 class="text-lg font-semibold text-gray-800">{item.title}</h2>
+              <p class="text-sm text-gray-600">{item.description}</p>
+            </div>
           </a>
         )
       )
@@ -69,9 +79,21 @@ function getRows(arr: any) {
         row.length === 1 && row[0].type === "slider" ? (
           <a
             href={`/drawings/${row[0].slug}`}
-            class="col-span-5 block w-4/6 h-40 mx-auto my-2 rounded shadow hover:shadow-lg hover:scale-105 transition-transform duration-300 hover:cursor-pointer"
+            class="col-span-5 block w-4/6 mx-auto my-2 px-2 pt-2 rounded shadow hover:shadow-lg hover:scale-105 transition-transform duration-300 hover:cursor-pointer bg-white overflow-hidden"
           >
-            <img src={row[0].image} alt="" class="w-full h-full" />
+            <div class="h-40 overflow-hidden">
+              <img
+                src={row[0].image}
+                alt={row[0].title}
+                class="w-full h-full"
+              />
+            </div>
+            <div class="p-3 text-center">
+              <h2 class="text-lg font-semibold text-gray-800">
+                {row[0].title}
+              </h2>
+              <p class="text-sm text-gray-600">{row[0].description}</p>
+            </div>
           </a>
         ) : (
           <>
@@ -79,7 +101,7 @@ function getRows(arr: any) {
             {row[0] && row[0].type === "drawing" ? (
               <a
                 href={`/drawings/${row[0].slug}`}
-                class="col-span-1 group w-full max-w-md mx-auto px-2 flex flex-col overflow-hidden rounded-lg shadow hover:shadow-lg transition bg-white"
+                class="col-span-1 group w-full max-w-md mx-auto px-2 pt-2 flex flex-col overflow-hidden rounded-lg shadow hover:shadow-lg transition bg-white"
               >
                 <div class="w-full aspect-[4/5] bg-gray-100 overflow-hidden">
                   <img
@@ -104,7 +126,7 @@ function getRows(arr: any) {
             {row[1] && row[1].type === "drawing" ? (
               <a
                 href={`/drawings/${row[1].slug}`}
-                class="col-span-1 group w-full max-w-md mx-auto px-2 flex flex-col overflow-hidden rounded-lg shadow hover:shadow-lg transition bg-white"
+                class="col-span-1 group w-full max-w-md mx-auto px-2 pt-2 flex flex-col overflow-hidden rounded-lg shadow hover:shadow-lg transition bg-white"
               >
                 <div class="w-full aspect-[4/5] bg-gray-100 overflow-hidden">
                   <img
