--- a/src/components/Gallery.astro
+++ b/src/components/Gallery.astro
@@ -79,13 +79,13 @@ function getRows(arr: any) {
         row.length === 1 && row[0].type === "slider" ? (
           <a
             href={`/drawings/${row[0].slug}`}
-            class="col-span-5 block w-4/6 mx-auto my-2 px-2 pt-2 rounded shadow hover:shadow-lg hover:scale-105 transition-transform duration-300 hover:cursor-pointer bg-white overflow-hidden"
+            class="col-span-5 block w-4/6 mx-auto my-2 px-2 pt-2 rounded shadow hover:shadow-lg hover:cursor-pointer bg-white overflow-hidden"
           >
             <div class="h-40 overflow-hidden">
               <img
                 src={row[0].image}
                 alt={row[0].title}
-                class="w-full h-full"
+                class="w-full h-full hover:scale-105 transition-transform duration-300"
               />
             </div>
             <div class="p-3 text-center">
